test/errors/undefined_parameter.luv
# RET: 1
# ERR: {self}:5:12:    return a + 1
# ERR: {ssss}                 ^ error: Undefined reference to 'a'.
def int func(int x):
    return a + 1

def int main():
    return func(3)
